<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_settings" >
        
        <EditTextPreference
            android:key="email"
            android:defaultValue="milos@milos.com"
            android:title="@string/pref_email" />
        
        <EditTextPreference
            android:key="name"
            android:defaultValue="Milos Stojanovic"
            android:title="@string/pref_name" />
        
        <EditTextPreference
            android:key="hostAddress"
            android:summary="@string/pref_host_address_summary"
            android:title="@string/pref_host_address" />
        
        <ListPreference
            android:key="currency"
            android:defaultValue="rsd"
            android:title="@string/pref_currency_title"
            android:summary="@string/pref_currency_summary"
            android:entries="@array/currency"
            android:entryValues="@array/currencyValues" />
        
    </PreferenceCategory>

</PreferenceScreen>